// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
/>
`;

exports[`Render default-two-items - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default-two-items"
  id="default-two-items"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    one
  </div>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    two
  </div>
</div>
`;

exports[`Render properties.style - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"border\\":\\"1px solid blue\\"}]}"
  data-testid="properties.style"
  id="properties.style"
  onClick={[Function]}
/>
`;

exports[`Render properties.style-two-items - value[0] 1`] = `
<div
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"border\\":\\"1px solid blue\\"}]}"
  data-testid="properties.style-two-items"
  id="properties.style-two-items"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    one
  </div>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    two
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema default-two-items 1`] = `true`;

exports[`Test Schema default-two-items 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`Test Schema properties.style-two-items 1`] = `true`;

exports[`Test Schema properties.style-two-items 2`] = `null`;
